--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"helmet": "^3.18.0",
+		"knex": "^0.18.0",
+		"morgan": "^1.9.1",
+		"sqlite3": "^4.0.9"
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
+		"nodemon": "^1.19.1",
 		"supertest": "^3.3.0"
 	}
 }
