--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Testing Sprint Challenge",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --watch --verbose",
+		"test": "cross-env DB_ENV=testing jest --watch --verbose",
 		"start": "nodemon index.js"
 	},
 	"repository": {
@@ -19,6 +19,8 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
+		"cross-env": "^5.2.0",
+		"dotenv": "^8.0.0",
 		"express": "^4.16.4",
 		"helmet": "^3.18.0",
 		"knex": "^0.18.0",
